<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_bg"
        android:padding="@dimen/size_40dp">

        <TextView
            android:id="@+id/medal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_30dp"
            android:text="@string/medal"
            android:textColor="@color/white"
            android:textSize="@dimen/text_35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logo_circle_image_view"
            android:layout_width="@dimen/login_logo_size"
            android:layout_height="@dimen/login_logo_size"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:scaleType="centerInside"
            android:src="@drawable/medal_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/medal_text" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/size_22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_circle_image_view">

            <EditText
                android:id="@+id/user_name_edt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/size_10dp"
                android:background="@color/colorCherry"
                android:hint="@string/name_and_last_name"
                android:padding="@dimen/size_10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/text_20sp" />

            <EditText
                android:id="@+id/user_email_edt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/size_20dp"
                android:background="@color/colorCherry"
                android:hint="@string/email"
                android:padding="@dimen/size_10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/text_20sp" />

            <EditText
                android:id="@+id/user_password_edt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/size_20dp"
                android:background="@color/colorCherry"
                android:hint="@string/password"
                android:padding="@dimen/size_10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/text_20sp" />

        </LinearLayout>

        <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20dp"
            android:background="@drawable/sign_in_btn"
            android:padding="@dimen/size_10dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_17sp"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <ImageView
            android:id="@+id/return_img"
            android:layout_width="@dimen/size_32dp"
            android:layout_height="@dimen/size_32dp"
            android:src="@drawable/return_icon"
            app:layout_constraintBottom_toBottomOf="@+id/register_btn"
            app:layout_constraintStart_toStartOf="@+id/linearLayout2"
            app:layout_constraintTop_toTopOf="@+id/register_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>