<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        android:orientation="vertical"
        android:padding="@dimen/size_20dp">

        <TextView
            android:id="@+id/price_changed_dialog_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/price_changed_dialog" />

        <LinearLayout
            android:id="@+id/decision_buttons_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/price_changed_dialog_txt"
            app:layout_constraintStart_toStartOf="@+id/price_changed_dialog_txt"
            app:layout_constraintTop_toBottomOf="@+id/price_changed_dialog_txt">

            <Button
                android:id="@+id/dialog_accept_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/dialog_btns"
                android:paddingStart="@dimen/size_12dp"
                android:paddingEnd="@dimen/size_12dp"
                android:textSize="@dimen/text_14sp"
                android:textColor="@color/black"
                android:text="@string/accept" />

            <Space
                android:layout_width="@dimen/size_20dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/dialog_deny_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="@drawable/dialog_btns"
                android:paddingStart="@dimen/size_12dp"
                android:paddingEnd="@dimen/size_12dp"
                android:textSize="@dimen/text_14sp"
                android:text="@string/deny"
                app:layout_constraintEnd_toEndOf="parent" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>