<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/size_20dp"
        android:background="@drawable/dialog_background">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/upload_img_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="uploaded_img,upload_icon,send_btn"/>

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer"
            android:textSize="@dimen/text_35sp"
            android:layout_marginTop="@dimen/size_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/uploaded_img"
            android:layout_width="@dimen/users_img_size"
            android:layout_height="@dimen/users_img_size"
            android:background="@color/browser_actions_title_color"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_result_dialog_txt" />

        <ImageView
            android:id="@+id/upload_icon"
            android:layout_width="@dimen/size_36dp"
            android:layout_height="@dimen/size_36dp"
            android:src="@drawable/upload_picture_icon"
            app:layout_constraintBottom_toBottomOf="@+id/uploaded_img"
            app:layout_constraintEnd_toEndOf="@+id/uploaded_img"
            app:layout_constraintStart_toStartOf="@+id/uploaded_img"
            app:layout_constraintTop_toTopOf="@+id/uploaded_img" />

        <TextView
            android:id="@+id/game_result_dialog_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/wait"
            android:textSize="@dimen/text_20sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/size_20dp"
            app:layout_constraintTop_toBottomOf="@+id/timer" />

        <Button
            android:id="@+id/send_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_btns"
            android:text="@string/send"
            android:paddingStart="@dimen/size_10dp"
            android:paddingEnd="@dimen/size_10dp"
            android:layout_marginTop="@dimen/size_20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uploaded_img" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>