<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_bg"
        android:padding="@dimen/size_12dp"
        android:orientation="vertical"
        tools:context=".fragments.LoginFragment">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/medal"
            android:layout_marginTop="@dimen/size_30dp"
            android:textColor="@color/white"
            android:textSize="@dimen/text_35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/first_language_img"
            android:layout_width="@dimen/size_46dp"
            android:layout_height="@dimen/size_46dp"
            android:background="@drawable/border_for_flags"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            tools:src="@drawable/russian_flag_icon" />

        <ImageView
            android:id="@+id/second_language_img"
            android:layout_width="@dimen/size_28dp"
            android:layout_height="@dimen/size_28dp"
            android:layout_marginTop="@dimen/size_10dp"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="@+id/first_language_img"
            app:layout_constraintStart_toStartOf="@+id/first_language_img"
            app:layout_constraintTop_toBottomOf="@+id/first_language_img"
            tools:src="@drawable/english_flag_icon" />

        <ImageView
            android:id="@+id/logo_circle_image_view"
            android:layout_width="@dimen/login_logo_size"
            android:layout_height="@dimen/login_logo_size"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:scaleType="centerInside"
            android:src="@drawable/medal_icon"
            app:layout_constraintBottom_toTopOf="@+id/email_edt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/email_edt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorCherry"
            android:hint="@string/email"
            android:padding="@dimen/size_10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/google_sign_in_btn"
            app:layout_constraintStart_toStartOf="@+id/google_sign_in_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password_edt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20dp"
            android:background="@color/colorCherry"
            android:hint="@string/password"
            android:padding="@dimen/size_10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_18sp"
            app:layout_constraintEnd_toEndOf="@+id/email_edt"
            app:layout_constraintStart_toStartOf="@+id/email_edt"
            app:layout_constraintTop_toBottomOf="@+id/email_edt" />

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_40dp"
            android:background="@drawable/sign_in_btn"
            android:padding="@dimen/size_10dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_17sp"
            app:layout_constraintStart_toStartOf="@+id/password_edt"
            app:layout_constraintTop_toBottomOf="@+id/password_edt" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_40dp"
            android:background="@drawable/sign_in_btn"
            android:padding="@dimen/size_10dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_17sp"
            app:layout_constraintEnd_toEndOf="@+id/password_edt"
            app:layout_constraintTop_toBottomOf="@+id/password_edt" />

        <RelativeLayout
            android:id="@+id/google_sign_in_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_40dp"
            android:layout_below="@id/logo_circle_image_view"
            android:layout_alignStart="@id/logo_circle_image_view"
            android:layout_alignEnd="@id/logo_circle_image_view"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/size_30dp"
            android:background="@color/colorCherry"
            android:focusable="true"
            android:paddingStart="@dimen/size_20dp"
            android:paddingEnd="@dimen/size_40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_btn">

            <ImageView
                android:id="@+id/google_icon_img"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="20dp"
                android:src="@drawable/common_google_signin_btn_icon_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/google_icon_img"
                android:text="@string/login_with_google"
                android:textColor="@color/white" />
        </RelativeLayout>

        <!--    <RelativeLayout-->
        <!--        android:id="@+id/fb_login_btn"-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="40dp"-->
        <!--        android:layout_below="@id/google_sign_in_btn"-->
        <!--        android:layout_alignStart="@id/google_sign_in_btn"-->
        <!--        android:layout_alignEnd="@id/google_sign_in_btn"-->
        <!--        android:layout_centerInParent="true"-->
        <!--        android:layout_marginStart="0dp"-->
        <!--        android:layout_marginTop="19dp"-->
        <!--        android:layout_marginEnd="0dp"-->
        <!--        android:background="@color/com_facebook_blue"-->
        <!--        android:focusable="true">-->

        <!--        <ImageView-->
        <!--            android:id="@+id/fb_icon_img"-->
        <!--            android:layout_width="22dp"-->
        <!--            android:layout_height="22dp"-->
        <!--            android:layout_alignParentStart="true"-->
        <!--            android:layout_centerInParent="true"-->
        <!--            android:layout_marginStart="22dp"-->
        <!--            android:src="@drawable/com_facebook_button_icon" />-->

        <!--        <TextView-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_centerInParent="true"-->
        <!--            android:layout_marginStart="10dp"-->
        <!--            android:layout_toEndOf="@+id/fb_icon_img"-->
        <!--            android:text="Login with Facebook"-->
        <!--            android:textColor="@color/white" />-->
        <!--    </RelativeLayout>-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>