<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.menu.profile.ProfileFragment">

    <data>

        <variable
            name="profileViewModel"
            type="com.sub_zet.medal.fragments.menu.profile.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_bg"
        android:padding="12dp">

        <ImageView
            android:id="@+id/first_language_img"
            android:layout_width="@dimen/size_46dp"
            android:layout_height="@dimen/size_46dp"
            android:scaleType="centerInside"
            android:background="@drawable/border_for_flags"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/russian_flag_icon" />

        <ImageView
            android:id="@+id/second_language_img"
            android:layout_width="@dimen/size_28dp"
            android:layout_height="@dimen/size_28dp"
            android:layout_marginTop="@dimen/size_10dp"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="@+id/first_language_img"
            app:layout_constraintStart_toStartOf="@+id/first_language_img"
            app:layout_constraintTop_toBottomOf="@+id/first_language_img"
            tools:src="@drawable/english_flag_icon" />

        <ImageView
            android:id="@+id/user_picture_img"
            android:layout_width="@dimen/profile_img_size"
            android:layout_height="@dimen/profile_img_size"
            android:alpha="0.5"
            android:background="@drawable/textview_shape"
            android:load_image="@{profileViewModel.profileModelLiveData.imageURL}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20dp"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_picture_img" />

        <TextView
            android:id="@+id/user_name_surname_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20dp"
            android:text="@{profileViewModel.profileModelLiveData.name}"
            android:textColor="@color/white"
            android:textSize="@dimen/text_18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/name_text"
            app:layout_constraintStart_toEndOf="@+id/name_text"
            app:layout_constraintTop_toBottomOf="@+id/user_picture_img"
            tools:text="Ruben Hayrapetyan" />

        <TextView
            android:id="@+id/user_id_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10dp"
            android:gravity="center"
            android:text="@string/user_id"
            android:textColor="@color/white"
            android:textSize="@dimen/text_18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name_surname_txt" />

        <TextView
            android:id="@+id/user_id_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{profileViewModel.profileModelLiveData.id}"
            android:textColor="@color/white"
            android:textSize="@dimen/text_18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/user_id_text"
            app:layout_constraintStart_toEndOf="@id/user_id_text"
            app:layout_constraintTop_toTopOf="@+id/user_id_text"
            tools:text="46" />

        <TextView
            android:id="@+id/balance_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10dp"
            android:gravity="center"
            android:text="@string/balance"
            android:textColor="@color/white"
            android:textSize="@dimen/text_18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_id_text" />

        <TextView
            android:id="@+id/user_balance_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{profileViewModel.profileModelLiveData.balance + `ք`}"
            android:textColor="@color/white"
            android:textSize="@dimen/text_18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/balance_text"
            app:layout_constraintStart_toEndOf="@+id/balance_text"
            app:layout_constraintTop_toTopOf="@+id/balance_text"
            tools:text="1000.00" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10dp"
            android:gravity="center"
            android:text="@string/games_rating"
            android:textColor="@color/white"
            android:textSize="@dimen/text_18sp"
            app:layout_constraintTop_toBottomOf="@+id/balance_text" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/user_game_rating_status_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:games_rating="@{profileViewModel.profileModelLiveData.gamesRatingArray}"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:listitem="@layout/row_games_rating" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>